Change Server Name

--- a/mini-app/index.html
+++ b/mini-app/index.html
@@ -12,7 +12,7 @@
       const user_id = tg.initDataUnsafe?.user?.id;
   
       if (user_id) {
-        fetch("https://your-render-url.com/index.php", {
+        fetch("https://mainbot-g94g.onrender.com/index.php", {
           method: "POST",
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({
