Add Telegram MiniApp API to ./mini-app/index.html

--- a/mini-app/index.html
+++ b/mini-app/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Afghan Code Mini App</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     window.onload = () => {
       const tg = window.Telegram.WebApp;
