--- a/mini-app/index.html
+++ b/mini-app/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Afghan Code Mini App</title>
+  <link rel="stylesheet" href="../asset/style/index.css">
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     window.onload = () => {
@@ -18,7 +19,7 @@
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({
             user_id: user_id,
-            message: "✅ Mini App opened successfully!"
+            message: "شما با موفقیت وارد مینی‌اپ شدید!\nآی‌دی:" + user_id
           })
         });
       }
@@ -27,6 +28,11 @@
   
 </head>
 <body>
-  <h1>Hello from Afghan Code Mini App!</h1>
+  
+  <main class="container">
+    <h1>به مینی‌اپ جامعه توسعه دهندگان افغان کدرز خوش‌آمدید!</h1>
+    <p>متن آزمایشی</p>
+  </main>
+  
 </body>
 </html>
