--- a/mini-app/index.html
+++ b/mini-app/index.html
@@ -12,7 +12,8 @@
       <h1>به مینی‌اپ جامعه توسعه دهندگان افغان کدرز خوش‌آمدید!</h1>
       <p>متن آزمایشی</p>
       <script>
-        sendMessage("jadksjfj")
+        sendMessage("jadksjfj");
+        sendMessage("jadksjfj2");
       </script>
     </main>
   </body>
