--- a/mini-app/index.html
+++ b/mini-app/index.html
@@ -8,13 +8,21 @@
     <script src="../asset/script/index.js"></script>
   </head>
   <body>
-    <main class="container">
-      <h1>به مینی‌اپ جامعه توسعه دهندگان افغان کدرز خوش‌آمدید!</h1>
-      <p>متن آزمایشی</p>
-      <script>
-        sendMessage("jadksjfj");
-        sendMessage("jadksjfj2");
-      </script>
-    </main>
+    <header id="app-header" style="position: relative; height: 300px;">
+      <img src="../asset/image/banner.jpg" alt="Banner" style="width:100%; height:100%; object-fit: cover; position: absolute; z-index: 0; top: 0; left: 0;">
+      <div style="
+        position: absolute;
+        top: 0; left: 0; right: 0; bottom: 0;
+        background-color: rgba(95, 2, 120, 0.5);
+        backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px);
+        z-index: 1;
+        ">
+        <h1 style="color: white; text-align: center; margin-top: 100px;">جامعه توسعه‌دهندگان افغان کدرز</h1>
+      </div>
+    </header>
+    
+
+    <main class="container"></main>
   </body>
 </html>
