Update MiniApp UI UX

--- a/mini-app/index.html
+++ b/mini-app/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../asset/style/index.css" />
+    <!-- <link rel="stylesheet" href="../asset/style/index.css" /> -->
 
     <!-- GSAP (Animation Platform) & ScrollTrigger Plugin from CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
