--- a/mini-app/index.html
+++ b/mini-app/index.html
@@ -1,7 +1,12 @@
 <html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <title>Afghan Code - Start V0.3</title>
 
     <!-- Tailwind CSS from CDN -->
@@ -28,6 +33,15 @@
     <script src="../asset/script/index.js"></script>
 
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        height: 100%;
+      }
       /* =============================================== */
       /* === Custom Styles & Configuration (Global)  === */
       /* =============================================== */
